--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@
   color: #f4eee0;
   
 }
+
+
+
+/* -------------------------- */
+
+@media(ax-width:600px){
+  .footer h4{
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
