--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -83,3 +83,30 @@ padding-top: 50px;
     background-color: #000;
     color: white;
   }
+
+  .contact-icons {
+    cursor: pointer;
+  }
+  
+
+
+  /* ----------------------------- */
+
+
+  @media(max-width:600px){
+    .contact{
+      margin: 0;
+      padding: 0;
+      margin-top: 50px;
+    }
+
+    .contact .card2{
+      margin: 0;
+    }
+
+    .contact .card2 h6{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
