--- a/src/pages/Internship/Internship.css
+++ b/src/pages/Internship/Internship.css
@@ -24,3 +24,22 @@
 .internship-exp .vertical-timeline-element-subtitle{
     color: rgba(255, 255, 255, 0.658);
 }
+
+
+/* -------------------------------- */
+
+
+@media(max-width){
+
+    .internship{
+       margin: 0;
+       padding: 0;
+       margin-top: 50px;
+    }
+
+    .internship hr{
+        width: 280px;
+    }
+
+
+}
