--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -92,3 +92,22 @@
     transition: all 0.5s ease;
     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 }
+
+
+/* -------------------------- */
+
+
+@media(max-width:600px){
+    .project{
+        margin: 0;
+        padding: 0;
+        margin-top: 50px;
+    }
+    .project hr{
+        width: 280px;
+    }
+
+    .project .card{
+        margin-top: 30px;
+    }
+}
